# mirrax_sim

./: README.md
mirrax_control/: CMakeLists.txt  package.xml
mirrax_control/launch/: joystick.launch
mirrax_description/: CMakeLists.txt  package.xml
mirrax_description/launch/: mirrax_description.launch  rviz_preview.launch
mirrax_description/meshes/: Wheel1RVIZ.STL  arm1RVIZ.STL  arm2RVIZ.STL  arm3RVIZ.STL  caseRVIZ.STL  shaftRVIZ.STL
mirrax_description/robots/: gazebo.xacro  mirrax_float.xacro
mirrax_description/rviz/: mirrax.rviz
mirrax_description/urdfs/: common.xacro  materials.xacro
mirrax_description/urdfs/arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.xacro  linear_actuator.xacro
mirrax_description/urdfs/base/: base.gazebo.xacro  base_float.xacro
mirrax_description/urdfs/leg/: leg.gazebo.xacro  leg.transmission.xacro  leg.xacro
mirrax_description/urdfs/sensors/: imu.xacro  lidar2D.xacro  sensors.xacro
mirrax_gazebo/: CMakeLists.txt  package.xml
mirrax_gazebo/config/: joint_controller.yaml  urax_joint_controller.yaml
mirrax_gazebo/launch/: empty_world.launch  machine_world.launch  mirrax.launch  rviz.launch  urax.launch
mirrax_gazebo/mesh/: machine_room_040.STL
mirrax_gazebo/rviz/: mirrax.rviz
mirrax_gazebo/scripts/: gazebo_p3d_tf.py  goto0  move_leg.py  robot_default  sim_hardware.py  sim_motion.py  velocity_remap.py
mirrax_gazebo/worlds/: empty.world  gzsim_world_1.world  machine.world  machine_old.world
mirrax_simple_demo/: CMakeLists.txt  package.xml
mirrax_simple_demo/launch/: joystick.launch
mirrax_simple_demo/src/: controller2robot.py
nexus_4wd_mecanum_simulator/: README.md
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/scripts/: test_move.py
urax_description/: CMakeLists.txt  package.xml
urax_description/launch/: rviz_preview.launch  urax_description.launch
urax_description/meshes/: Arm_link_1.STL  Arm_link_2.STL  Arm_link_3.STL  LegRVIZ.STL  WheelRVIZ.STL
urax_description/robots/: urax_float.xacro
urax_description/rviz/: mirrax.rviz
urax_description/urdfs/: common.xacro  materials.xacro
urax_description/urdfs/arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.xacro
urax_description/urdfs/base/: base.gazebo.xacro  base_float.xacro
urax_description/urdfs/leg/: leg.gazebo.xacro  leg.transmission.xacro  leg.xacro
urax_description/urdfs/sensors/: depth_camera.xacro  imu.xacro  rgb_camera.xacro  sensors.xacro
